Finalized Cruds ProductsController
