# app/Models/Product.php
@@ -13,12 +13,10 @@ class Product extends Model
     protected $dates = [];
 
     protected $fillable = [
-        'id',
         'name',
         'description',
         'stock',
-        'price',
-        'created_at',
-        'updated_at',
+        'price'
     ];
+
 }
