# storage/api-docs/api-docs.json
@@ -33,81 +33,85 @@
                 ],
                 "summary": "Product method postProduct",
                 "operationId": "postProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "name",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "description",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "price",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "stock",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "created_at",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "updated_at",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully response!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/postProduct"
-                                }
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/postProduct"
                             }
                         }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successfully response!"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "nor found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "419": {
+                        "description": "Page Expired required Token"
+                    }
+                }
+            }
+        },
+        "/api/products/1": {
+            "get": {
+                "tags": [
+                    "getProductById"
+                ],
+                "summary": "Product method getProductById",
+                "operationId": "getProductById",
+                "responses": {
+                    "200": {
+                        "description": "Successfully response!"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "nor found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "419": {
+                        "description": "Page Expired required Token"
+                    }
+                }
+            }
+        },
+        "/api/products/5": {
+            "put": {
+                "tags": [
+                    "putProduct"
+                ],
+                "summary": "Product method putProduct",
+                "operationId": "putProduct",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/putProduct"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successfully response!"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -128,57 +132,7 @@
             }
         },
         "/api/products/{product}": {
-            "get": {
-                "tags": [
-                    "getProductById"
-                ],
-                "summary": "Product method getProductById",
-                "operationId": "getProductById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully response!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/getProductById"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "nor found"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "419": {
-                        "description": "Page Expired required Token"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "putProduct"
-                ],
-                "summary": "Product method putProduct",
-                "operationId": "putProduct",
+            "delete": {
                 "parameters": [
                     {
                         "name": "id",
@@ -224,128 +178,20 @@
                         "schema": {
                             "type": "integer"
                         }
-                    },
-                    {
-                        "name": "created_at",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "updated_at",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully response!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/putProduct"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "nor found"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "419": {
-                        "description": "Page Expired required Token"
-                    }
-                }
-            },
+                ]
+            }
+        },
+        "/api/products/9": {
             "delete": {
                 "tags": [
                     "deleteProduct"
                 ],
                 "summary": "Product method deleteProduct",
                 "operationId": "deleteProduct",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "Successfully response!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/deleteProduct"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "nor found"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "419": {
-                        "description": "Page Expired required Token"
-                    }
-                }
-            }
-        },
-        "/api/products/{product}/edit": {
-            "get": {
-                "tags": [
-                    "getProductEdit"
-                ],
-                "summary": "Product method getProductEdit",
-                "operationId": "getProductEdit",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "required": true,
-                        "in": "path",
-                        "description": "Properties products",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully response!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/getProductEdit"
-                                }
-                            }
-                        }
+                        "description": "Successfully response!"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -447,21 +293,12 @@
                     },
                     "stock": {
                         "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
                     }
                 }
             },
             "postProduct": {
                 "type": "object",
                 "properties": {
-                    "id": {
-                        "type": "integer"
-                    },
                     "name": {
                         "type": "string"
                     },
@@ -473,12 +310,6 @@
                     },
                     "stock": {
                         "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
                     }
                 }
             },
@@ -499,47 +330,12 @@
                     },
                     "stock": {
                         "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
-                    }
-                }
-            },
-            "getProductEdit": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "description": {
-                        "type": "string"
-                    },
-                    "price": {
-                        "type": "number"
-                    },
-                    "stock": {
-                        "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
                     }
                 }
             },
             "putProduct": {
                 "type": "object",
                 "properties": {
-                    "id": {
-                        "type": "integer"
-                    },
                     "name": {
                         "type": "string"
                     },
@@ -551,12 +347,6 @@
                     },
                     "stock": {
                         "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
                     }
                 }
             },
@@ -577,12 +367,6 @@
                     },
                     "stock": {
                         "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
                     }
                 }
             },
